# ctx-tool

./: .gitignore  MAINTAINING.md  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
src/ctx/: __init__.py  main.py
tests/: test_cli.py
